# aioyoomoney-api

./: README.rst  examples.py  pyproject.toml
aioyoomoney/: authorize.py  client.py  globals.py  quickpay.py
aioyoomoney/base/: context_method.py
aioyoomoney/data_classes/: __init__.py  digital.py  operation.py
aioyoomoney/methods/: __init__.py  account.py  history.py  operation_details.py
