[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aioyoomoney-api"
version = "0.0.1"
authors = [
  { name="Ktoto" },
]
description = "Async Yoomoney API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "aiohttp"
]

[project.urls]
GitHub = "https://github.com/KtotoNekt/aioyoomoney-api"
CodeBerg = "https://codeberg.org/Ktoto/aioyoomoney-api"
